Fix layout issue.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -126,7 +126,7 @@
 }
 .card {
   position: relative;
-  margin: 20px;
+  margin-top: 20px;
   padding: 10px;
   border-radius: 20px;
   background-color: white;
